# my_dropper_app

./: .gitignore  IMPROVEMENT_PLAN.md  LICENSE  README.md  launch.sh  my_dropper_app_qt6.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/my_dropper_app/: __init__.py  __main__.py  app.py  constants.py  models.py  parsing.py  theme.py  worker.py
tests/: conftest.py  test_accessibility.py  test_cancellation.py  test_collision_prompt.py  test_cross_fs_move.py  test_destination_validation.py  test_drop_event.py  test_drop_label_state.py  test_ensure_destination.py  test_file_ops.py  test_filename_collision.py  test_init_settings.py  test_log_bound.py  test_open_destination.py  test_recent_destinations.py  test_save_text.py  test_settings.py  test_symlinks.py  test_text_parsing.py
